Add hourly weather.

--- a/app/views/shelters/show.html.erb
+++ b/app/views/shelters/show.html.erb
@@ -21,5 +21,7 @@
   <p>Date: <%= weather.weather_date.strftime("%A %m/%d/%y") %>, Low: <%= weather.low %>, High: <%= weather.high %>, Description: <%= weather.description %>, Precip Chance: <%= weather.precip_chance %></p>
 <% end %>
 
+<%= @hourly_weather.inspect %>
+
 <%= link_to 'Edit', edit_shelter_path(@shelter) %> |
 <%= link_to 'Back', shelters_path %>
