--- a/app/views/shelters/show.html.erb
+++ b/app/views/shelters/show.html.erb
@@ -27,6 +27,9 @@
   <% end %>
 <% end %>
 
+<%= link_to("Previous", @shelter.previous) unless @shelter.previous.nil? %>
+<%= link_to("Next", @shelter.next) unless @shelter.next.nil? %>
+
 <script type="text/javascript">
 dates = document.getElementsByClassName('more');
 for (var i = 0; i < dates.length; i++) {
