--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,12 +1,12 @@
 <p>Find shelter by mile.<p>
-<form onsubmit="return nearestShelter();" action="#" accept-charset="UTF-8" method="post">
+<form onsubmit="return nearestShelter();" action="#" accept-charset="UTF-8" method="post" class="pure-form">
   <input type="text" name="mileage" id="mileage" placeholder="NOBO Mileage">
-  <input type="submit" value="Go">
+  <input type="submit" value="Go" class="pure-button pure-button-primary">
 </form>
 
 <% @states.each do |state, state_info| %>
 <div>
-  <div class="state btn" data-statename="<%= state %>">
+  <div class="state pure-button" data-statename="<%= state %>">
     <h4>
       <%= state %>
       <small class="summary pull-right">High: <%= state_info[:average_weather][:high] %>, Low: <%= state_info[:average_weather][:low] %></small>
