More adjustments to css and layout.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
   <div class="state-content">
     <button class="state pure-button" data-statename="<%= state %>">
       <%= state %>
-      <small class="summary pull-right"><%= state_info[:average_weather][:high] %>&deg; / <%= state_info[:average_weather][:low] %>&deg;</small>
+      <small class="summary"><%= state_info[:average_weather][:high] %>&deg; / <%= state_info[:average_weather][:low] %>&deg;</small>
     </button>
 
     <div id="<%= state %>" class="hidden">
