--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,12 @@
       .hidden {
         display:none;
       }
+      .fill-width {
+        width: 100%;
+      }
+      .button-margin {
+        margin-left: 10px;
+      }
       .state-content {
         margin: 10px 0;
       }
@@ -41,6 +47,7 @@
         background-color: #ccc;
       }
       .container {
+        max-width: 600px;
         padding-right: 15px;
         padding-left: 15px;
         margin-right: auto;
