Edit style and layout of shelter show. Add N/A message for days without hourly weather.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,7 +47,7 @@
         background-color: #ccc;
       }
       .container {
-        max-width: 600px;
+        max-width: 900px;
         padding-right: 15px;
         padding-left: 15px;
         margin-right: auto;
@@ -61,6 +61,8 @@
         background-color: #3086d6;
         color: #efefef
       }
+
+      .table-align-left th, .table-align-left td { text-align: left; }
 
       @media (min-width: 768px) {
         .container {
