--- a/app/views/shelters/show.html.erb
+++ b/app/views/shelters/show.html.erb
@@ -12,31 +12,41 @@
       <%= @shelter.state.name %> (<%= @shelter.latt %>, <%= @shelter.long %>)
     </div>
   </section>
-
-<% @weather_days.each do |all_weather| %>
-  <% weather = all_weather.first %>
-  <% hourly_weather = all_weather.last %>
-  <table class="pure-table pure-table-striped">
-    <tr class="tr-header">
-      <th><strong><%= weather.weather_date.strftime("%A %m/%d/%y") %></strong></th>
-      <th><%= weather.high %>&deg;/<%= weather.low %>&deg;</th>
-      <th><%= weather.description %></th>
-    </tr>
-
-    <tr class="hourly-header">
-      <th>Time</th>
-      <th>Temp (&deg;F)</th>
-      <th>Description</th>
-    </tr>
-    <% hourly_weather.each do |hour| %>
-      <tr>
-        <td> <%= hour.date.strftime("%l:%M %p") %> </td>
-        <td> <%= hour.temp %>&deg; </td>
-        <td> <%= hour.description %> </td>
+<div class="pure-g">
+  <div class="pure-u-2-3">
+  <% @weather_days.each do |all_weather| %>
+    <% weather = all_weather.first %>
+    <% hourly_weather = all_weather.last %>
+    <table class="pure-table pure-table-striped fill-width">
+      <tr class="tr-header">
+        <th>Time</th>
+        <th>Temp (&deg;F)</th>
+        <th>Description</th>
       </tr>
+      <tr class="hourly-header table-align-left">
+        <th><strong><%= weather.weather_date.strftime("%A %m/%d") %></strong></th>
+        <th><%= weather.high %>&deg;/<%= weather.low %>&deg;</th>
+        <th><%= weather.description %></th>
+      </tr>
+      <% if hourly_weather.empty? %>
+      <tr>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>No hourly weather available.</td>
+      </tr>
+      <% else %>
+        <% hourly_weather.each do |hour| %>
+          <tr>
+            <td> <%= hour.date.strftime("%l:%M %p") %> </td>
+            <td> <%= hour.temp %>&deg; </td>
+            <td> <%= hour.description %> </td>
+          </tr>
+        <% end %>
+      <% end %>
+      </table>
     <% end %>
-    </table>
-  <% end %>
-
+  </div>
+  <div class="pure-u-1-3"></div>
+</div>
 <%= link_to("Previous", @shelter.previous, class: "pure-button pure-button-primary") unless @shelter.previous.nil? %>
 <%= link_to("Next", @shelter.next, class: "pure-button pure-button-primary") unless @shelter.next.nil? %>
