--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,38 +1,44 @@
 <p>Find shelter by mile.</p>
-<div>
-<form onsubmit="return nearestShelter();" action="#" accept-charset="UTF-8" method="post" class="pure-form">
-  <div class="pure-g">
-    <div class="pure-u-5-6">
-      <input type="text" name="mileage" id="mileage" class="fill-width" placeholder="NOBO Mileage">
-    </div>
-    <div class="pure-u-1-6">
-      <input type="submit" value="Go" class="pure-button pure-button-primary button-margin">
-    </div>
+<div class="pure-g">
+  <div class="pure-u-1 pure-u-md-2-3">
+    <form onsubmit="return nearestShelter();" action="#" accept-charset="UTF-8" method="post" class="pure-form pure-g">
+        <div class="pure-u-5-6">
+          <input type="text" name="mileage" id="mileage" class="pure-u-1" placeholder="NOBO Mileage">
+        </div>
+        <div class="pure-u-1-6">
+          <div class="pure-g">
+            <div class="pure-u-1-24"></div>
+            <input type="submit" value="Go" class="pure-button pure-button-primary pure-u-23-24">
+          </div>
+        </div>
+    </form>
   </div>
-</form>
 </div>
+<div class="pure-g">
+  <div class="pure-u-1 pure-u-md-2-3">
+    <% @states.each do |state, state_info| %>
+      <div class="state-content">
+        <button class="state pure-button fill-width" data-statename="<%= state %>">
+          <%= state %>
+          <small class="summary"><%= state_info[:average_weather][:high] %>&deg; / <%= state_info[:average_weather][:low] %>&deg;</small>
+        </button>
 
-<% @states.each do |state, state_info| %>
-  <div class="state-content">
-    <button class="state pure-button fill-width" data-statename="<%= state %>">
-      <%= state %>
-      <small class="summary"><%= state_info[:average_weather][:high] %>&deg; / <%= state_info[:average_weather][:low] %>&deg;</small>
-    </button>
-
-    <div id="<%= state %>" class="hidden">
-      <table class="pure-table pure-table-striped shelter-list fill-width">
-        <% state_info[:shelters].each do |shelter| %>
-        <tr>
-          <td><%= shelter.mileage %></td>
-          <td>
-            <a href="<%= shelter_path(shelter) %>"><%= shelter.name %></a>
-          </td>
-        </tr>
-        <% end %>
-      </table>
-    </div>
+        <div id="<%= state %>" class="hidden">
+          <table class="pure-table pure-table-striped shelter-list fill-width">
+            <% state_info[:shelters].each do |shelter| %>
+            <tr>
+              <td><%= shelter.mileage %></td>
+              <td>
+                <a href="<%= shelter_path(shelter) %>"><%= shelter.name %></a>
+              </td>
+            </tr>
+            <% end %>
+          </table>
+        </div>
+      </div>
+    <% end %>
   </div>
-<% end %>
+</div>
 
 <script type="text/javascript">
   function nearestShelter() {
