--- a/app/views/shelters/show.html.erb
+++ b/app/views/shelters/show.html.erb
@@ -1,3 +1,5 @@
+<div class="pure-g">
+  <div class="pure-u-1 pure-u-md-2-3">
   <p id="notice"><%= notice %></p>
 
   <section id="shelter-info">
@@ -12,8 +14,6 @@
       <%= @shelter.state.name %> (<%= @shelter.latt %>, <%= @shelter.long %>)
     </div>
   </section>
-<div class="pure-g">
-  <div class="pure-u-2-3">
   <% @weather_days.each do |all_weather| %>
     <% weather = all_weather.first %>
     <% hourly_weather = all_weather.last %>
@@ -50,7 +50,7 @@
       </table>
     <% end %>
   </div>
-  <div class="pure-u-1-3"></div>
+  <div class="pure-u-1 pure-u-md-1-3"></div>
 </div>
 <%= link_to("Previous", @shelter.previous, class: "pure-button pure-button-primary") unless @shelter.previous.nil? %>
 <%= link_to("Next", @shelter.next, class: "pure-button pure-button-primary") unless @shelter.next.nil? %>
