Change whole tr on the homepage to be a clickable target.

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -33,6 +33,9 @@ a:hover {
 .shelter-list {
   margin: 10px;
 }
+.clickable-shelter:hover {
+  cursor: pointer;
+}
 .pure-table-striped {
   margin: 20px 0;
 }
