--- a/app/views/shelters/show.html.erb
+++ b/app/views/shelters/show.html.erb
@@ -14,6 +14,9 @@
       <%= @shelter.state.name %> (<%= @shelter.latt %>, <%= @shelter.long %>)
     </div>
   </section>
+  <% if @weather_days.first.first.low < 35 %>
+    <div class="alert alert-danger"><strong>Freeze Warning!</strong> Sleep with your water filter to prevent it from freezing.</div>
+  <% end %>
   <% @weather_days.each do |all_weather| %>
     <% weather = all_weather.first %>
     <% hourly_weather = all_weather.last %>
