--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -106,3 +106,27 @@ a:hover {
     width: 1170px;
   }
 }
+
+@media all and (min-width: 960px) {
+    body{
+        font-size: 18px;
+    }
+}
+
+@media all and (max-width: 959px) and (min-width: 600px) {
+    body{
+        font-size: 16px;
+    }
+}
+
+@media all and (max-width: 599px) and (min-width: 320px) {
+    body{
+        font-size: 12px;
+    }
+}
+
+@media all and (max-width: 319px) and (min-width: 0px) {
+    body{
+        font-size: 9px;
+    }
+}
