--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,44 +1,38 @@
-<p>Find shelter by mile.</p>
-<div class="pure-g">
-  <div class="pure-u-1 pure-u-md-2-3">
-    <form onsubmit="return nearestShelter();" action="#" accept-charset="UTF-8" method="post" class="pure-form pure-g">
-        <div class="pure-u-5-6">
-          <input type="text" name="mileage" id="mileage" class="pure-u-1" placeholder="NOBO Mileage">
-        </div>
-        <div class="pure-u-1-6">
-          <div class="pure-g">
-            <div class="pure-u-1-24"></div>
-            <input type="submit" value="Go" class="pure-button pure-button-primary pure-u-23-24">
-          </div>
-        </div>
-    </form>
-  </div>
-</div>
-<div class="pure-g">
-  <div class="pure-u-1 pure-u-md-2-3">
-    <% @states.each do |state, state_info| %>
-      <div class="state-content">
-        <button class="state pure-button fill-width" data-statename="<%= state %>">
-          <%= state %>
-          <small class="summary"><%= state_info[:average_weather][:high] %>&deg; / <%= state_info[:average_weather][:low] %>&deg;</small>
-        </button>
-
-        <div id="<%= state %>" class="hidden">
-          <table class="pure-table pure-table-striped shelter-list fill-width">
-            <% state_info[:shelters].each do |shelter| %>
-            <tr class="clickable-shelter" data-href="<%= shelter_url(shelter) %>">
-              <td><%= shelter.mileage %></td>
-              <td>
-                <a href="<%= shelter_path(shelter) %>"><%= shelter.name %></a>
-              </td>
-            </tr>
-            <% end %>
-          </table>
-        </div>
+<h2 class="content-subhead">Find Shelter by mile.</h2>
+<form id="mile-search-form" onsubmit="return nearestShelter();" action="#" accept-charset="UTF-8" method="post" class="pure-form pure-g">
+    <div class="pure-u-5-6">
+      <input type="text" name="mileage" id="mileage" class="pure-u-1" placeholder="NOBO Mileage">
+    </div>
+    <div class="pure-u-1-6">
+      <div class="pure-g">
+        <div class="pure-u-1-24"></div>
+        <input type="submit" value="Go" class="pure-button pure-button-primary pure-u-23-24">
       </div>
-    <% end %>
+    </div>
+</form>
+
+<h2 class="content-subhead">Find Shelter by state.</h2>
+<% @states.each do |state, state_info| %>
+  <div class="state-content">
+    <button class="state pure-button fill-width" data-statename="<%= state %>">
+      <%= state %>
+      <small class="summary"><%= state_info[:average_weather][:high] %>&deg; / <%= state_info[:average_weather][:low] %>&deg;</small>
+    </button>
+
+    <div id="<%= state %>" class="hidden">
+      <table class="pure-table pure-table-striped shelter-list fill-width">
+        <% state_info[:shelters].each do |shelter| %>
+        <tr class="clickable-shelter" data-href="<%= shelter_url(shelter) %>">
+          <td><%= shelter.mileage %></td>
+          <td>
+            <a href="<%= shelter_path(shelter) %>"><%= shelter.name %></a>
+          </td>
+        </tr>
+        <% end %>
+      </table>
+    </div>
   </div>
-</div>
+<% end %>
 
 <script type="text/javascript">
   var clickableShelters = document.getElementsByClassName('clickable-shelter');
