--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,11 +8,16 @@
   </head>
 
   <body>
-    <div class="pure-g container">
-      <div class="pure-u-1">
-      <h1><%= link_to('Fast AT Weather', root_path) %></h1>
-      <%= yield %>
-    </div>
+    <div id="layout" class="pure-g">
+      <div class="sidebar pure-u-1 pure-u-md-1-4">
+        <div class="header">
+          <h1 class="brand-title"><%= link_to('Fast AT Weather', root_path) %></h1>
+          <%= yield :sidebar %>
+        </div>
+      </div>
+      <div class="content pure-u-1 pure-u-md-3-4">
+        <%= yield %>
+      </div>
     </div>
   </body>
 </html>
