--- a/app/views/shelters/show.html.erb
+++ b/app/views/shelters/show.html.erb
@@ -1,25 +1,24 @@
-<div class="pure-g">
-  <div class="pure-u-1 pure-u-md-2-3">
-  <p id="notice"><%= notice %></p>
+  <% content_for :sidebar do %>
+    <section id="shelter-info">
+      <h2 class="brand-tagline">
+        <%= @shelter.name %>
+      </h2>
+      <p class="brand-tagline">
+        NOBO Mile <%= @shelter.mileage %>
+      </p>
+      <p class="brand-tagline">
+        <%= @shelter.elevation %> ft
+      </p>
+    </section>
+  <% end %>
 
-  <section id="shelter-info">
-    <h1 id="shelter-name">
-      <%= @shelter.name %>
-      <small>Elevation: <%= @shelter.elevation %> feet</small>
-    </h1>
-    <div>
-      NOBO Mile <%= @shelter.mileage %>
-    </div>
-    <div>
-      <%= @shelter.state.name %> (<%= @shelter.latt %>, <%= @shelter.long %>)
-    </div>
-  </section>
   <% if @weather_days.first.first.low < 35 %>
     <div class="alert alert-danger"><strong>Freeze Warning!</strong> Sleep with your water filter tonight to prevent it from freezing.</div>
   <% end %>
   <% @weather_days.each do |all_weather| %>
     <% weather = all_weather.first %>
     <% hourly_weather = all_weather.last %>
+    <h2 class="content-subhead"><%= weather.weather_date.strftime("%A %B %-d, %Y") %></h2>
     <table class="pure-table pure-table-striped fill-width">
       <tr class="tr-header">
         <th>Time</th>
@@ -52,8 +51,5 @@
       <% end %>
       </table>
     <% end %>
-  </div>
-  <div class="pure-u-1 pure-u-md-1-3"></div>
-</div>
 <%= link_to("Previous", @shelter.previous, class: "pure-button pure-button-primary") unless @shelter.previous.nil? %>
 <%= link_to("Next", @shelter.next, class: "pure-button pure-button-primary") unless @shelter.next.nil? %>
