--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,23 +13,25 @@
 
 <h2 class="content-subhead">Find Shelter by state.</h2>
 <% @states.each do |state, state_info| %>
-  <div class="state-content">
-    <button class="state pure-button fill-width" data-statename="<%= state %>">
-      <%= state %>
-      <small class="summary"><%= state_info[:average_weather][:high] %>&deg; / <%= state_info[:average_weather][:low] %>&deg;</small>
-    </button>
+  <div class="state-content pure-g">
+    <div class="pure-u-1 pure-u-md-2-3">
+      <button class="state pure-button pure-u-1" data-statename="<%= state %>">
+        <%= state %>
+        <span class="post-category pull-right"><%= state_info[:average_weather][:high] %>&deg; / <%= state_info[:average_weather][:low] %>&deg;</span>
+      </button>
 
-    <div id="<%= state %>" class="hidden">
-      <table class="pure-table pure-table-striped shelter-list fill-width">
-        <% state_info[:shelters].each do |shelter| %>
-        <tr class="clickable-shelter" data-href="<%= shelter_url(shelter) %>">
-          <td><%= shelter.mileage %></td>
-          <td>
-            <a href="<%= shelter_path(shelter) %>"><%= shelter.name %></a>
-          </td>
-        </tr>
-        <% end %>
-      </table>
+      <div id="<%= state %>" class="hidden">
+        <table class="pure-table pure-table-striped shelter-list fill-width">
+          <% state_info[:shelters].each do |shelter| %>
+          <tr class="clickable-shelter" data-href="<%= shelter_url(shelter) %>">
+            <td><%= shelter.mileage %></td>
+            <td>
+              <a href="<%= shelter_path(shelter) %>"><%= shelter.name %></a>
+            </td>
+          </tr>
+          <% end %>
+        </table>
+      </div>
     </div>
   </div>
 <% end %>
