--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <h2 class="content-subhead">Find Shelter by mile.</h2>
 <form id="mile-search-form" onsubmit="return nearestShelter();" action="#" accept-charset="UTF-8" method="post" class="pure-form pure-g">
     <div class="pure-u-5-6">
-      <input type="text" name="mileage" id="mileage" class="pure-u-1" placeholder="NOBO Mileage">
+      <input type="number" step="0.1" name="mileage" id="mileage" class="pure-u-1" placeholder="NOBO Mileage">
     </div>
     <div class="pure-u-1-6">
       <div class="pure-g">
@@ -16,7 +16,7 @@
   <div class="state-content pure-g">
     <div class="pure-u-1 pure-u-md-2-3">
       <button class="state pure-button pure-u-1" data-statename="<%= state %>">
-        <%= state %>
+        <span class="pull-left"><%= state %></span>
         <span class="post-category pull-right"><%= state_info[:average_weather][:high] %>&deg; / <%= state_info[:average_weather][:low] %>&deg;</span>
       </button>
 
