--- a/app/views/shelters/show.html.erb
+++ b/app/views/shelters/show.html.erb
@@ -18,11 +18,18 @@
   <% @weather_days.each do |all_weather| %>
     <% weather = all_weather.first %>
     <% hourly_weather = all_weather.last %>
-    <h2 class="content-subhead">
-      <%= weather.weather_date.strftime("%A %B %-d, %Y") %>
-      <span class="post-category pull-right"><%= weather.description %></span>
-      <span class="post-category post-category-design pull-right"><%= weather.high %>&deg; / <%= weather.low %>&deg;</span>
-    </h2>
+    <div class="content-subhead">
+      <div class="pure-g">
+        <div class="pure-u-1 pure-u-md-2-3">
+          <span><%= weather.weather_date.strftime("%A %B %-d, %Y") %></span>
+        </div>
+        <div class="pure-u-1 pure-u-md-1-3">
+          <span class="post-category pull-right break-pull-mobile"><%= weather.description %></span>
+          <span class="post-category post-category-design pull-right break-pull-mobile"><%= weather.high %>&deg; / <%= weather.low %>&deg;</span>
+        </div>
+        <div class="clear-fix"></div>
+      </div>
+    </div>
     <table class="pure-table pure-table-striped fill-width">
       <tr class="tr-header">
         <th>Time</th>
